--- a/products.html
+++ b/products.html
@@ -8,12 +8,16 @@
 	<link rel="stylesheet" href="css/styles.css"/> <!--enlace de hoja de estilos -->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+
+	<!--Boostrap JQuery -->
+	<script src="js/jquery.js"></script>
+	<!--Librería para validar números -->
+	<script src="js/autoNumeric.js"></script>
+
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
   <script src="js/ui-bootstrap-tpls.js"></script>
-	<!--Boostrap JQuery -->
-	<script src="js/jquery.js"></script>
 
 	<!--Boostrap JS Para animaciones-->
 	<script src="js/bootstrap.min.js"></script>
@@ -42,8 +46,6 @@
 	<script src="js/angular-file-upload.min.js"></script>
 	<!-- *****************************************Librería de boostrap toogle ***************************************** -->
 	<script src="js/angular-bootstrap-toggle.min.js"></script>
-	<!-- *****************************************Librería de controlador principal***************************************** -->
-	<script src="js/controller.js"></script>
 	<!-- *****************************************Alertas***************************************** -->
 	<link rel="stylesheet" type="text/css" href="https://ptreesys.mx/sharedfiles/src/sweetalert.css">
 	<script src="https://ptreesys.mx/sharedfiles/src/sweetalert.min.js"></script>
@@ -90,9 +92,9 @@
 							<div class="row" style="margin-top:10px;">
 								<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 									<div class="input-group input-group-sm">
-										<input style="border-radius:0;" type="text" class="form-control" aria-label="Small" placeholder="Search...">
+										<input ng-model="txtSearch" style="border-radius:0;" type="text" class="form-control" aria-label="Small" placeholder="Search...">
 										<div class="input-group-append">
-											<button type="button" class="btn btn-secondary" style="border-radius:0;">
+											<button ng-click="FindProductByText();" type="button" class="btn btn-secondary" style="border-radius:0;">
 												<i class="fa fa-search"></i>
 											</button>
 										</div>
@@ -106,9 +108,6 @@
 								</li>
 								<li class="nav-item">
 									<a class="nav-link active" href="products.html">PRODUCTS</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="#">SERVICES </a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="#">APPLICATIONS</a>
@@ -150,31 +149,41 @@
 					<div class="row">
 						<div class=" col-xs-12 col-sm-12 col-md-3 col-lg-3">
 							<div class="card card-body bg-light mb-3">
+
+								<div ng-show="ShowDetail">
+
+									<div class="card-header bg-green text-white text-uppercase">Price</div>
+									<br>
+
+									<div class="row">
+										<div class="col-md-12">
+											<form>
+												<div class="form-row">
+													<div class="col">
+														<input ng-model="minimum" type="text" angular-currency="options2" variable-options="true" class="form-control">
+													</div>
+													<div class="col">
+														<input ng-model="maximum" type="text" angular-currency="options2" variable-options="true" class="form-control">
+													</div>
+													<div class="col-md-3">
+														<button ng-click="filterByPrice();" type="submit" class="btn btn-secondary"><i class="fas fa-angle-right"></i></button>
+													</div>
+													<div>
+													</div>
+												</div>
+											</form>
+										</div>
+									</div>
+
+									<br>
+
+								</div>
+
 								<div class="card-header bg-green text-white text-uppercase">Categories</div>
 								<ul class="list-group list-group-flush ">
-									<li class="list-group-item" ng-repeat="ProductCardsItem in ProductCardsMainMenu"><a href="#" class=" active">{{ProductCardsItem.NAME}}</a></li>
+									<li ng-click="FindSubcategories(ProductCardsItem.ID, ProductCardsItem.HASCHILD, ProductCardsItem.NAME);" class="list-group-item" ng-repeat="ProductCardsItem in ProductCardsMainMenu"><a href="#" class=" active">{{ProductCardsItem.NAME}}</a></li>
 								</ul>
-								<div class="card-header bg-green text-white text-uppercase">Price</div>
-								<br>
-								<div class="row">
-									<div class="col-md-12">
-										<form>
-											<div class="form-row">
-												<div class="col">
-													<input type="text" class="form-control" placeholder="min">
-												</div>
-												<div class="col">
-													<input type="text" class="form-control" placeholder="max">
-												</div>
-												<div class="col-md-3">
-													<button type="submit" class="btn btn-secondary"><i class="fas fa-angle-right"></i></button>
-												</div>
-												<div>
-												</div>
-											</div>
-										</form>
-									</div>
-								</div>
+
 							</div>
 						</div>
 
@@ -200,7 +209,7 @@
 										<div class="card">
 											<img class="card-img-top" ng-src="{{'/img/'+ ProductCardsItem.CATIMAGE}}" alt="products-cube-image" width="400" height="200">
 											<div class="card-body" >
-											<h5 class="card-title text-center"><a href="#" ng-click="FindSubcategories(ProductCardsItem.ID, ProductCardsItem.HASCHILD);" title="View Product">{{ProductCardsItem.NAME}}</a></h5>
+											<h5 class="card-title text-center"><a href="#" ng-click="FindSubcategories(ProductCardsItem.ID, ProductCardsItem.HASCHILD, ProductCardsItem.NAME);" title="View Product">{{ProductCardsItem.NAME}}</a></h5>
 										</div>
 
 									</div>
@@ -233,6 +242,17 @@
 												</div>
 												<div class="col-md-3 text-center">
 													<h4> {{'$' + ProductCardsItem.PRICE}} </h4>
+
+													<!-- <button ng-click="ViewDetail(ProductCardsItem)" type="button" class="btn btn-secondary" style="border-radius:0;">
+														View Details (ARREGLAR)
+		                        <i class="fa fa-search"></i>
+		                      </button>
+
+													<button ng-click="ViewDetail(ProductCardsItem)" type="button" class="btn btn-secondary" style="border-radius:0;">
+														Add to cart (ARREGLAR)
+		                        <i class="fa fa-search"></i>
+		                      </button> -->
+
 												</div>
 											</div>
 											<br>
@@ -313,5 +333,9 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<!-- Librería de controlador principal -->
+<script src="js/controller.js"></script>
+
 </body>
 </html>
