--- a/details-product.html
+++ b/details-product.html
@@ -76,7 +76,7 @@
 							<li class="dropdown">
 								<a class="" href="login.html"> Login/Register</a>
 							</li>
-							<li style="background-color:#048949;"><a  href="cart.html">
+							<li class="carrito"><a  href="cart.html">
 								<i class="fas fa-cart-plus"></i> Cart
 								<span class="badge badge-cart">10</span>
 							</a></li>
@@ -131,22 +131,28 @@
 <main>
 
 <section>
-	<div class="container">
+	<div class="container wrap">
 
-  <div class="row">
-        <div class="col">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Products</li>
 
-                </ol>
-            </nav>
-        </div>
-    </div>
-  </div>
 
-	<div class="container">
+	<div class="container ">
+		<div class="">
+			<h3>Details Products</h3>
+			<hr>
+		</div>
+		<div class="row">
+					<div class="col">
+							<nav aria-label="breadcrumb">
+									<ol class="breadcrumb">
+											<li class="breadcrumb-item"><a href="index.html">Home</a></li>
+											<li class="breadcrumb-item "><a href="products.html">Products</a></li>
+											<li class="breadcrumb-item active" aria-current="page">Details Products</li>
+
+									</ol>
+							</nav>
+					</div>
+			</div>
+		</div>
 	    <div class="row">
 	        <!-- Image -->
 	        <div class="col-12 col-lg-6">
@@ -167,18 +173,22 @@
 										  <h4>Samsung Galaxy S9</h4>
 											<hr>
 	                    <p class="price_discounted"><span>Price:</span><span style="color:#B23328"> {{ProductCardsItem.PRICE}} $</span></p>
-<div class="row">
-	<div class="col-md-12">
-		<div class="form-group">
 
-		</div>
-	</div>
-</div>
 <hr>
 <h6><strong>DESCRIPTION</strong></h6>
 <p>{{ProductCardsItem.DESCRIPTION}}.</p>
-	                    <div class="reviews_product p-3 mb-2 ">
-	                        <a class="pull-right" href="#reviews"></a>
+<a href="#" style="color:#1979B9;" >
+		<i class="fas fa-eye"></i> View Details
+	</a>
+</div>
+<hr>
+	                    <div class=" p-3 mb-2 ">
+
+														<button  type="button" class="btn btn-secondary btn-green btn-block pull-right " style="border-radius:0;">
+															<i class="fas fa-cart-plus"></i>
+															Add to cart
+			                      </button>
+
 	                    </div>
 
 	                </div>
