--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <li class="dropdown">
                   <a class="" href="login.html"> Login/Register</a>
                 </li>
-                <li style="background-color:#048949;"><a  href="cart.html">
+                <li class="carrito"><a  href="cart.html">
                   <i class="fas fa-cart-plus"></i> My Cart
                   <span class="badge badge-cart "> 10</span>
                 </a></li>
