--- a/register-login.html
+++ b/register-login.html
@@ -22,7 +22,7 @@
 						 <i class="fas fa-phone" aria-hidden="true"></i>   + 786-293-3272
 
 					 </div>
-				
+
 			 <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 text-right">
 						 <ul class="right-menu ">
 						 <li><a href=""><i class="fas fa-question-circle"></i></a></li>
@@ -32,7 +32,7 @@
 							<li class="dropdown">
 								<a class="active" href="register-login.html"> Login/Register</a>
 							</li>
-							<li style="background-color:#048949;"><a  href="cart.html">
+							<li class="carrito"><a  href="cart.html">
 								<i class="fas fa-cart-plus"></i> Cart
 								<span class="badge  badge-cart ">10</span>
 							</a></li>
