--- a/products.html
+++ b/products.html
@@ -222,13 +222,22 @@
 										<th scope="col">Products</th>
 										<th scope="col">Price</th>
 										<th scope="col">Description</th>
+										<th></th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr ng-repeat="ProductCardsItem in ProductCards">
 										<td>{{ProductCardsItem.NUM}}</td>
 										<td>{{ProductCardsItem.PRICE}}</td>
-										<td>{{ProductCardsItem.DESCRIPTION}}</td>
+										<td>{{ProductCardsItem.DESCRIPTION}} <a  href="#" style="color:#1979B9;" >
+												<i class="fas fa-eye"></i> View Details
+											</a></td>
+										<td>
+											<button ng-click="AddToCart(ProductCardsItem)" type="button" class="btn btn-secondary btn-green btn-block " style="border-radius:0;">
+												<i class="fas fa-cart-plus"></i>
+												Add to cart
+											</button>
+										</td>
 									</tr>
 								</tbody>
 							</table>
