--- a/payment-information.html
+++ b/payment-information.html
@@ -133,88 +133,111 @@
 	<div class="container wrap heading-principal">
 
   <div class="heading heading-principal">
-    <h1>My cart</h1>
-    <a href="products.html" class="btn btn-secondary continue-shopping">Continue Shopping</a>
+    <h1>Payment Information</h1>
+    <a href="#" class="btn btn-secondary continue-shopping"><i class="fas fa-plus"></i> Add new card</a>
   </div>
   <div class="cart-shopping">
-<!--    <ul class="tableHead">
-      <li class="prodHeader">Product</li>
-      <li>Quantity</li>
-      <li>Total</li>
-       <li>Remove</li>
-    </ul>-->
-    <ul class="cart-shoppingWrap">
+		<table class="table table-hover">
+		  <thead>
+		    <tr>
+					<th></th>
+		      <th scope="col">Your credit and debits cards</th>
+		      <th scope="col">Name on Card</th>
+		      <th scope="col">Expires on</th>
+					<th></th>
 
+		    </tr>
+		  </thead>
+		  <tbody>
+		    <tr>
+		      <th scope="row"> <input type="radio" aria-label="Radio button for following text input"></th>
+		      <td>Julio Briceño</td>
+		      <td>589</td>
+		      <td>11/2020</td>
+					<td><a class="btn "><i class="fas fa-times"></i></a></td>
+		    </tr>
+		    <tr>
+		      <th scope="row"> <input type="radio" aria-label="Radio button for following text input"></th>
+		      <td>Hector Hernandez </td>
+		      <td>1010</td>
+		      <td>01/2021</td>
+					<td><a class="btn "><i class="fas fa-times"></i></a></td>
+		    </tr>
 
-      <li ng-repeat="ProductCardsItem in myCart" ng-class-odd="'items odd'" ng-class-even="'items even'" >
+		  </tbody>
+		</table>
+<br>
+		<form style="margin-top:30px;">
+			<fieldset>
 
-    <div class="infoWrap">
-        <div class="cart-shoppingSection">
-        <img src="img/phone300x300.png" alt="" class="itemImg" />
-          <p class="itemNumber">{{ProductCardsItem.NUM}}</p>
-          <h3>{{ProductCardsItem.NUM}}</h3>
+		<h6> <strong>Add new Payment Information</strong></h6>
+		<hr>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="form-group">
+					<label for="exampleInputEmail1">First Name: </label>
+					<input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="form-group">
+					<label for="exampleInputPassword1">Last Name: </label>
+					<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+				</div>
+			</div>
+		</div>
 
-           <p> <input ng-model="ProductCardsItem.QTY" type="text"  class="qty" placeholder="1"/></p>
+		<div class="row">
 
-          <p class="stockStatus"> In Stock</p>
-        </div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="exampleInputPassword1">	Credit Card Type:</label>
+						<select class="form-control" id="exampleFormControlSelect1">
+							<option>Purchasing</option>
+							<option>Technician</option>
+						</select>
+					</div>
+				</div>
 
+			<div class="col-md-6">
+				<div class="form-group">
+					<label for="exampleInputPassword1">Credit Card Number: </label>
+					<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+				</div>
+			</div>
+		</div>
+<div class="row">
+<div class="col-md-6">
+	<div class="form-group">
+		<label for="exampleInputPassword1">Code: </label>
+		<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+	</div>
+</div>
+<div class="col-md-3">
+	<div class="form-group">
+		<label for="exampleInputPassword1">Expiration Date: </label>
+		<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+	</div>
+</div>
+<div class="col-md-3">
+	<label for="exampleInputPassword1">  </label>
+	<select class="form-control" id="exampleFormControlSelect1">
+		<option>Purchasing</option>
+		<option>Technician</option>
+	</select>
+</div>
+</div>
 
-        <div class="prodTotal cart-shoppingSection">
-          <p>${{ProductCardsItem.PRICE}}</p>
-        </div>
-              <div class="cart-shoppingSection removeWrap">
-           <a ng-click="removeCart(ProductCardsItem.NUM);" href="#" class="remove">x</a>
-        </div>
-      </div>
-      </li>
+		</fieldset>
+		</form>
+		<br>
+		<div class="row justify-content-end">
+			<div class="col-md-4 ">
+				<a href="payment-information.html" class="btn btn-secondary btn-green btn-block ">Checkout</a>
+			</div>
+		</div>
 
-
-
-      <!-- <li class="items even">
-
-       <div class="infoWrap">
-        <div class="cart-shoppingSection">
-
-        <img src="img/camera300x300.png" alt="" class="itemImg" />
-          <p class="itemNumber">#QUE-007544-002</p>
-          <h3>Item Name 1</h3>
-
-           <p> <input type="text"  class="qty" placeholder="1"/> x $1500.00</p>
-
-          <p class="stockStatus"> In Stock</p>
-        </div>
-
-
-        <div class="prodTotal cart-shoppingSection">
-          <p>$15.00</p>
-        </div>
-              <div class="cart-shoppingSection removeWrap">
-           <a href="#" class="remove">x</a>
-        </div>
-      </div>
-      </li> -->
-
-
-
-
-      <!--<li class="items even">Item 2</li>-->
-
-    </ul>
-  </div>
-
-
-
-  <div class="subtotal heading-principal">
-    <ul>
-      <li class="totalRow"><span class="label">Subtotal</span><span class="value">$2000.00</span></li>
-
-            <li class="totalRow"><span class="label">Tax</span><span class="value">$4.00</span></li>
-            <li class="totalRow final"><span class="label">Total</span><span class="value">$35000.00</span></li>
-      <li class="totalRow"><a href="payment-information.html" class="btn btn-secondary btn-green btn-block ">Checkout</a></li>
-
-    </ul>
-  </div>
+</div>
 </div>
 </main>
 </body>
