--- a/products.html
+++ b/products.html
@@ -152,7 +152,7 @@
 
 
 
-						
+
 
 								<div class="card-header bg-green text-white text-uppercase">Categories</div>
 								<ul class="list-group list-group-flush ">
@@ -198,12 +198,14 @@
 														<li>{{ProductCardsItem.HEIGHT}}</li>
 														<li>{{ProductCardsItem.WEIGHT}}</li>
 													</ul>
-													<a ng-click="ViewDetail(ProductCardsItem)" href="#" style="color:#1979B9;" >
-															<i class="fas fa-eye"></i> View Details
-														</a>
+
 												</div>
 												<div class="col-md-3 text-center">
 													<h4> {{'$' + ProductCardsItem.PRICE}} </h4>
+
+														<button  ng-click="ViewDetail(ProductCardsItem)" type="button" class="btn  btn-outline-info btn-block" style="border-radius:0;margin-bottom:5px;">
+																<i class="fas fa-eye"></i> View Details
+														</button>
 													<button ng-click="AddToCart(ProductCardsItem)" type="button" class="btn btn-secondary btn-green btn-block " style="border-radius:0;">
 														<i class="fas fa-cart-plus"></i>
 														Add to cart
@@ -229,13 +231,14 @@
 									<tr ng-repeat="ProductCardsItem in ProductCards">
 										<td>{{ProductCardsItem.NUM}}</td>
 										<td>{{ProductCardsItem.PRICE}}</td>
-										<td>{{ProductCardsItem.DESCRIPTION}} <a  href="#" style="color:#1979B9;" >
-												<i class="fas fa-eye"></i> View Details
-											</a></td>
+										<td>{{ProductCardsItem.DESCRIPTION}} </td>
 										<td>
+											<button type="button" class="btn  btn-outline-info " style="border-radius:0;margin-bottom:5px;">
+													<i class="fas fa-eye"></i> View Details
+											</button>
 											<button ng-click="AddToCart(ProductCardsItem)" type="button" class="btn btn-secondary btn-green btn-block " style="border-radius:0;">
 												<i class="fas fa-cart-plus"></i>
-												Add to cart
+											Add to cart
 											</button>
 										</td>
 									</tr>
