--- a/details-product.html
+++ b/details-product.html
@@ -76,9 +76,9 @@
 							<li class="dropdown">
 								<a class="" href="login.html"> Login/Register</a>
 							</li>
-							<li class="carrito"><a  href="cart.html">
+							<li ng-class="(myCart.length>0) ? 'carrito-azul' : 'carrito'"><a  href="cart.html">
 								<i class="fas fa-cart-plus"></i> Cart
-								<span class="badge badge-cart">10</span>
+								<span ng-class="(myCart.length>0) ? 'badge carrito-lleno' : 'badge badge-cart'">{{myCart.length}}</span>
 							</a></li>
 
 
@@ -170,21 +170,18 @@
 	        <div class="col-12 col-lg-6 add_to_cart_block">
 	            <div class="card bg-light mb-3">
 	                <div class="card-body">
-										  <h4>Samsung Galaxy S9</h4>
+										  <h4>{{ProductCardsItem.NUM}}</h4>
 											<hr>
 	                    <p class="price_discounted"><span>Price:</span><span style="color:#B23328"> {{ProductCardsItem.PRICE}} $</span></p>
 
 <hr>
 <h6><strong>DESCRIPTION</strong></h6>
 <p>{{ProductCardsItem.DESCRIPTION}}.</p>
-<a href="#" style="color:#1979B9;" >
-		<i class="fas fa-eye"></i> View Details
-	</a>
 </div>
 <hr>
 	                    <div class=" p-3 mb-2 ">
 
-														<button  type="button" class="btn btn-secondary btn-green btn-block pull-right " style="border-radius:0;">
+														<button ng-click="AddToCart(ProductCardsItem)" type="button" class="btn btn-secondary btn-green btn-block pull-right " style="border-radius:0;">
 															<i class="fas fa-cart-plus"></i>
 															Add to cart
 			                      </button>
