creacion de shipping,credit,order address

--- a/order.html
+++ b/order.html
@@ -133,109 +133,45 @@
 	<div class="container wrap heading-principal">
 
   <div class="heading heading-principal">
-    <h1>Payment Information</h1>
-    <a href="#" class="btn btn-secondary continue-shopping"><i class="fas fa-plus"></i> Add new card</a>
+    <h1>Review your order</h1>
+
   </div>
-  <div class="cart-shopping">
-		<table class="table table-hover">
-		  <thead>
-		    <tr>
-					<th></th>
-		      <th scope="col">Your credit and debits cards</th>
-		      <th scope="col">Name on Card</th>
-		      <th scope="col">Expires on</th>
-					<th></th>
-
-		    </tr>
-		  </thead>
-		  <tbody>
-		    <tr>
-		      <th scope="row"> <input type="radio" aria-label="Radio button for following text input"></th>
-		      <td>Julio Briceño</td>
-		      <td>589</td>
-		      <td>11/2020</td>
-					<td><a class="btn "><i class="fas fa-times"></i></a></td>
-		    </tr>
-		    <tr>
-		      <th scope="row"> <input type="radio" aria-label="Radio button for following text input"></th>
-		      <td>Hector Hernandez </td>
-		      <td>1010</td>
-		      <td>01/2021</td>
-					<td><a class="btn "><i class="fas fa-times"></i></a></td>
-		    </tr>
-
-		  </tbody>
-		</table>
-<br>
-		<form style="margin-top:30px;">
-			<fieldset>
-
-		<h6> <strong>Add new Payment Information</strong></h6>
-		<hr>
-		<div class="row">
-			<div class="col-md-6">
-				<div class="form-group">
-					<label for="exampleInputEmail1">First Name: </label>
-					<input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="form-group">
-					<label for="exampleInputPassword1">Last Name: </label>
-					<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
-				</div>
-			</div>
-		</div>
-
-		<div class="row">
-
-				<div class="col-md-6">
-					<div class="form-group">
-						<label for="exampleInputPassword1">	Credit Card Type:</label>
-						<select class="form-control" id="exampleFormControlSelect1">
-							<option>Purchasing</option>
-							<option>Technician</option>
-						</select>
-					</div>
-				</div>
-
-			<div class="col-md-6">
-				<div class="form-group">
-					<label for="exampleInputPassword1">Credit Card Number: </label>
-					<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
-				</div>
-			</div>
-		</div>
-<div class="row">
-<div class="col-md-6">
-	<div class="form-group">
-		<label for="exampleInputPassword1">Code: </label>
-		<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
-	</div>
+	<br>
+  <div class="row">
+		<div class="card-group">
+  <div class="card">
+    <div class="text-center" style="margin-top:15px;"><i class="fas fa-map-marker fa-2x"></i></div>
+    <div class="card-body">
+      <h5 class="card-title">Shipping address</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+  <div class="card">
+    <div class="text-center" style="margin-top:15px;"><i class="fas fa-credit-card fa-2x"></i></div>
+    <div class="card-body">
+      <h5 class="card-title">Payment Information</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+  <div class="card">
+      <div class="text-center" style="margin-top:15px;"><i class="fas fa-shopping-cart fa-2x"></i></div>
+    <div class="card-body">
+      <h5 class="card-title">Order Summary</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    </div>
+    <div class="card-footer">
+      	<a href="order.html" class="btn btn-secondary btn-green btn-block ">Place your order</a>
+    </div>
+  </div>
 </div>
-<div class="col-md-3">
-	<div class="form-group">
-		<label for="exampleInputPassword1">Expiration Date: </label>
-		<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
-	</div>
-</div>
-<div class="col-md-3">
-	<label for="exampleInputPassword1">  </label>
-	<select class="form-control" id="exampleFormControlSelect1">
-		<option>Purchasing</option>
-		<option>Technician</option>
-	</select>
-</div>
-</div>
+  </div>
 
-		</fieldset>
-		</form>
-		<br>
-		<div class="row justify-content-end">
-			<div class="col-md-4 ">
-				<a href="shipping-address.html" class="btn btn-secondary btn-green btn-block ">Continue</a>
-			</div>
-		</div>
 
 </div>
 </div>
