--- a/shipping-address.html
+++ b/shipping-address.html
@@ -133,17 +133,19 @@
 	<div class="container wrap heading-principal">
 
   <div class="heading heading-principal">
-    <h1>Payment Information</h1>
-    <a href="#" class="btn btn-secondary continue-shopping"><i class="fas fa-plus"></i> Add new card</a>
+    <h1>Shipping address</h1>
+    <a href="#" class="btn btn-secondary continue-shopping"><i class="fas fa-plus"></i> Add new Shipping address</a>
   </div>
   <div class="cart-shopping">
 		<table class="table table-hover">
 		  <thead>
 		    <tr>
 					<th></th>
-		      <th scope="col">Your credit and debits cards</th>
-		      <th scope="col">Name on Card</th>
-		      <th scope="col">Expires on</th>
+		      <th scope="col">Full name</th>
+		      <th scope="col">Address</th>
+		      <th scope="col">City</th>
+					<th scope="col">State</th>
+					<th scope="col">Phone</th>
 					<th></th>
 
 		    </tr>
@@ -152,88 +154,76 @@
 		    <tr>
 		      <th scope="row"> <input type="radio" aria-label="Radio button for following text input"></th>
 		      <td>Julio Briceño</td>
-		      <td>589</td>
-		      <td>11/2020</td>
+		      <td>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </td>
+		      <td>Florida 3322-1045</td>
+					<td>Medley ,Fl 3322 United States</td>
+					<td>(305)603410</td>
 					<td><a class="btn "><i class="fas fa-times"></i></a></td>
 		    </tr>
 		    <tr>
-		      <th scope="row"> <input type="radio" aria-label="Radio button for following text input"></th>
-		      <td>Hector Hernandez </td>
-		      <td>1010</td>
-		      <td>01/2021</td>
-					<td><a class="btn "><i class="fas fa-times"></i></a></td>
+					<th scope="row"> <input type="radio" aria-label="Radio button for following text input"></th>
+ 				 <td>Julio Briceño</td>
+ 				 <td>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </td>
+ 				 <td>Detroit 3322-1045</td>
+ 				 <td>Medley ,Fl 3322 United States</td>
+ 				 <td>(305)603410</td>
+				 <td><a class="btn "><i class="fas fa-times"></i></a></td>
 		    </tr>
 
 		  </tbody>
 		</table>
 <br>
-		<form style="margin-top:30px;">
-			<fieldset>
+<form style="margin-top:30px;">
+          <fieldset>
 
-		<h6> <strong>Add new Payment Information</strong></h6>
-		<hr>
-		<div class="row">
-			<div class="col-md-6">
-				<div class="form-group">
-					<label for="exampleInputEmail1">First Name: </label>
-					<input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="form-group">
-					<label for="exampleInputPassword1">Last Name: </label>
-					<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
-				</div>
-			</div>
-		</div>
+        <h6><strong>Shipping address</strong></h6>
+        <hr>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Street Address 1: </label>
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Street Address 2: </label>
+            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="exampleInputPassword1">  City: </label>
+                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="exampleInputPassword1">  State:</label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>Purchasing</option>
+                  <option>Technician</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="exampleInputPassword1">  Phone: </label>
+                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="exampleInputPassword1">  Fax: </label>
+                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+              </div>
+            </div>
+          </div>
+        </fieldset>
+      </form>
 
-		<div class="row">
-
-				<div class="col-md-6">
-					<div class="form-group">
-						<label for="exampleInputPassword1">	Credit Card Type:</label>
-						<select class="form-control" id="exampleFormControlSelect1">
-							<option>Purchasing</option>
-							<option>Technician</option>
-						</select>
-					</div>
-				</div>
-
-			<div class="col-md-6">
-				<div class="form-group">
-					<label for="exampleInputPassword1">Credit Card Number: </label>
-					<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
-				</div>
-			</div>
-		</div>
-<div class="row">
-<div class="col-md-6">
-	<div class="form-group">
-		<label for="exampleInputPassword1">Code: </label>
-		<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
-	</div>
-</div>
-<div class="col-md-3">
-	<div class="form-group">
-		<label for="exampleInputPassword1">Expiration Date: </label>
-		<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
-	</div>
-</div>
-<div class="col-md-3">
-	<label for="exampleInputPassword1">  </label>
-	<select class="form-control" id="exampleFormControlSelect1">
-		<option>Purchasing</option>
-		<option>Technician</option>
-	</select>
-</div>
-</div>
-
-		</fieldset>
-		</form>
 		<br>
 		<div class="row justify-content-end">
 			<div class="col-md-4 ">
-				<a href="shipping-address.html" class="btn btn-secondary btn-green btn-block ">Continue</a>
+				<a href="creditcard-address.html" class="btn btn-secondary btn-green btn-block ">Continue</a>
 			</div>
 		</div>
 
